# rust-blockchain

./: Cargo.toml
src/: miner.rs  model.rs
src/model/: block.rs
