[package]
name = "rust_blockchain"
version = "0.4.0"
edition = "2021"

[dependencies]
actix-web = "4.1.0"
anyhow = "1.0.58"
chrono = "0.4.19"
crossbeam-utils = "0.8.10"
ctrlc = { version = "3.2.2", features = ["termination"] }
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
env_logger = "0.11.3"
ethereum-types = "0.14.1"
futures = "0.3.21"
hex = "0.4.3"
isahc = "1.7.2"
log = "0.4.17"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"
sha2 = "0.10.8"
thiserror = "1.0.31"

[dev-dependencies]
assert_cmd = "2.0.4"
nix = { version = "0.29", features = ["signal"]}
serial_test = "3"

[dev-dependencies.cargo-husky]
version = "1.5"
default-features = false
features = ["precommit-hook", "run-cargo-clippy", "run-cargo-fmt", "run-cargo-check", "run-cargo-test"]